correccion barra de navegacion

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="#experience">Experiencia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#education">Educación</a>
+          <a class="nav-link" href="#education">Formación</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#skills">Habilidades</a>
