--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#about">Sobre mí</a>
+          <a class="nav-link active" href="#sobre mi">Sobre mí</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#experience">Experiencia</a>
+          <a class="nav-link" href="#experiencia">Experiencia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#education">Formación</a>
+          <a class="nav-link" href="#formación">Formación</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#skills">Habilidades</a>
+          <a class="nav-link" href="#habilidades">Habilidades</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contacto</a>
+          <a class="nav-link" href="#contacto">Contacto</a>
         </li>
       </ul>
     </div>
