--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>Curriculum vitae</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
-<body>
+<body class= "texto-general">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top shadow">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top shadow texto-banner">
   <div class="container">
     <a class="navbar-brand fw-bold" href="#">Flavia Reyes Pulgar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -50,7 +53,7 @@
   </header>
 
   <section class="py-5">
-    <div class="container">
+    <div class="container texto-descripcion">
       <h2>Sobre mí</h2>
       <p> Soy una mujer apasionada por el aprendizaje y la creatividad. Me formé como Chef Internacional tras estudiar Gastronomía Internacional, y he desarrollado una gran capacidad de organización, atención al detalle y trabajo bajo presión. Actualmente, soy mamá de un hijo y estoy reinventándome profesionalmente mientras estudio desarrollo frontend.</p>
 
@@ -61,7 +64,7 @@
   <section class="bg-light py-5">
     <div class="container">
       <h2>Experiencia</h2>
-      <ul class="list-group">
+      <ul class="list-group texto-experiencia">
         <li class="list-group-item">Interpretación en ideas de clientes. </li>
         <li class="list-group-item">Producción en cuarto caliente, frío, pastelería y chocoltería.</li>
         <li class="list-group-item">Elaboración y producción de eventos.</li>
@@ -72,12 +75,11 @@
   <section class="py-5">
     <div class="container">
       <h2>Formación</h2>
-      <ul class="list-group">
+      <ul class="list-group texto-seccion">
         <li class="list-group-item">Duoc UC Santiago - Chile  (2013)</li>
       </ul>
     </div>
   </section>
-
 
 <section class="bg-light py-5">
   <div class="container">
