Ajuste tamaño texto de Navbar, Descripción, Experiencia y Formación y Acerca De[main 6d82042] Ajuste tamaño texto de Navbar, Descripción, Experiencia y Formación y Acerca De, Justificado de texto Descripción y Cambio de Fuente a Roboto

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </section> 
 
 
-  <footer class="bg-primary text-white text-center py-3">
+  <footer class="bg-primary text-white text-center py-3 texto-acerca">
     <p class="mb-2">&copy; 2025 FlaviaRP. Todos los derechos reservados.</p>
   </footer>
 
